# eldenring-autofarm

./: README.md  config.toml  main.py  pyproject.toml
src/: farm.py  models.py  widget.py
